objects/Credit_Control__c.object
<CustomObject>
    <description>Irfan/Unni to provide a description of this object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Controls</relationshipLabel>
        <relationshipName>Credit_Controls</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_by_Credit_Mgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked by Credit Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Control_Area__c</fullName>
        <label>Credit Control Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_CompCode_CredCtrlArea__c</fullName>
        <description>External ID column used for integration</description>
        <externalId>true</externalId>
        <label>IDEXX Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Company_Code_Description__c</fullName>
        <label>SAP Company Code Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Credit Control</label>
    <nameField>
        <label>Credit Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>